--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-toolbelt": "latest",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -48,7 +49,9 @@
     "drizzle-orm": "^0.28.6",
     "drizzle-typebox": "^0.1.1",
     "elysia": "0.7.4",
+    "marked": "^9.1.0",
     "pino-pretty": "^10.2.0",
+    "sanitize-html": "^2.11.0",
     "zod": "^3.22.2"
   }
 }
